Sec53_Chap493-XXX: optimized code